syntax = "proto3";

import "google/protobuf/any.proto";

message ValueAny {
  google.protobuf.Any value = 1;
}
